testdata/baselines/reference/submodule/compiler/APISample_WatchWithDefaults.errors.txt
APISample_WatchWithDefaults.ts(8,21): error TS2307: Cannot find module 'typescript' or its corresponding type declarations.
APISample_WatchWithDefaults.ts(32,27): error TS7006: Parameter 'rootNames' implicitly has an 'any' type.
APISample_WatchWithDefaults.ts(32,38): error TS7006: Parameter 'options' implicitly has an 'any' type.
APISample_WatchWithDefaults.ts(32,47): error TS7006: Parameter 'host' implicitly has an 'any' type.
APISample_WatchWithDefaults.ts(32,53): error TS7006: Parameter 'oldProgram' implicitly has an 'any' type.
APISample_WatchWithDefaults.ts(38,31): error TS7006: Parameter 'program' implicitly has an 'any' type.


==== APISample_WatchWithDefaults.ts (6 errors) ====
    /*
     * Note: This test is a public API sample. This uses default sys interface without having to pass anything
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import ts = require("typescript");
                        ~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'typescript' or its corresponding type declarations.
    
    function watchMain() {
        const configPath = ts.findConfigFile(/*searchPath*/ "./", ts.sys.fileExists, "tsconfig.json");
        if (!configPath) {
            throw new Error("Could not find a valid 'tsconfig.json'.");
        }
    
        // TypeScript can use several different program creation "strategies":
        //  * ts.createEmitAndSemanticDiagnosticsBuilderProgram,
        //  * ts.createSemanticDiagnosticsBuilderProgram
        //  * ts.createAbstractBuilder
        // The first two produce "builder programs". These use an incremental strategy to only re-check and emit files whose
        // contents may have changed, or whose dependencies may have changes which may impact change the result of prior type-check and emit.
        // The last uses an ordinary program which does a full type check after every change.
        // Between `createEmitAndSemanticDiagnosticsBuilderProgram` and `createSemanticDiagnosticsBuilderProgram`, the only difference is emit.
        // For pure type-checking scenarios, or when another tool/process handles emit, using `createSemanticDiagnosticsBuilderProgram` may be more desirable.
    
        // Note that there is another overload for `createWatchCompilerHost` that takes a set of root files.
        const host = ts.createWatchCompilerHost(configPath, {}, ts.sys);
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames, options, host, oldProgram) => {
                              ~~~~~~~~~
!!! error TS7006: Parameter 'rootNames' implicitly has an 'any' type.
                                         ~~~~~~~
!!! error TS7006: Parameter 'options' implicitly has an 'any' type.
                                                  ~~~~
!!! error TS7006: Parameter 'host' implicitly has an 'any' type.
                                                        ~~~~~~~~~~
!!! error TS7006: Parameter 'oldProgram' implicitly has an 'any' type.
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
                                  ~~~~~~~
!!! error TS7006: Parameter 'program' implicitly has an 'any' type.
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    watchMain();
    
==== node_modules/typescript/package.json (0 errors) ====
    {
        "name": "typescript",
        "types": "/.ts/typescript.d.ts"
    }
    